@@ -22,6 +22,7 @@
 #include <cmath>
 #include "libport/cstdio"
 #include <sstream>
+#include <iomanip>
 
 #include "libport/ref-pt.hh"
 
@@ -625,7 +626,7 @@ UValue::add(UValue *v)
       res->dataType = DATA_STRING;
 
       std::ostringstream ostr;
-      ostr << std::fixed << val << v->str->str();
+      ostr << val << v->str->str();
       res->str = new UString(ostr.str().c_str());
       if (res->str == 0)
       {
@@ -647,7 +648,7 @@ UValue::add(UValue *v)
       res->dataType = DATA_STRING;
 
       std::ostringstream ostr;
-      ostr << str->str() << std::fixed << v->val;
+      ostr << str->str() << v->val;
       res->str = new UString(ostr.str().c_str());
 
       if (res->str == 0)
