@@ -1,5 +1,10 @@
 2007-04-20  Jean-Christophe Baillie  <baillie@gostai.com>
 
+	revert change from previous commit: std::fixed should not be used. 
+	* src/uvalue.cc: std::fixed does not behave as it should.
+
+2007-04-20  Jean-Christophe Baillie  <baillie@gostai.com>
+
 	fix ticket #24 
 	* src/uvalue.cc: add std::fixed formater.
 
